              bir engel işlemi sürerken yeni bir işlem yapmak isterseniz kuyruğa alınıyor ve zamanı gelince işleniyor.
engel işlemi sürerken yeni açılan bir sekmede bahsi geçen cooldown ve işlem kuyruğunu görebilirsiniz.
bug fix: tüm engelleri kaldırma özelliği ekşisözlük.com güncellemesi nedeniyle bozulmuştu, düzeltildi.

v2.2
yayın: 

Versiyon notları (detaylı) 
-------------------------------------------------
v1.0  
yayın: 06.05.2022
kullanıcıdan alınan listedeki yazarlar engellendi. 
liste iki formatı destekliyor: url ve yazar isimleri [v1.2 ile kaldırıldı]
liste validate edildi. [v1.2 ile kaldırıldı]
sayfa  aktif değilken (aktif tab) uygulamanın çalışmasının durması engellendi.
son sayfanın otomatik olarak kapanması sağlandı.
açılan tab kapatıldığında yeniden açılarak engellemenin devam etmesi sağlandı. [v1.2 ile kaldırıldı]  
gereksiz izinler tespit edildi ve manifestten çıkarıldı: active tab, declerative content, downloads.
'message port closed before a response was received' hatası giderildi. 
uygulamanın iki kez başlaması engellendi.
uygulamayı yarısında durdurma özelliği bir buton ile sağlandı. [v1.2 ile kaldırıldı] 
tüm sitedelerde değil sadece ekşide çalışması (injected js'nin) sağlandı.
popup vs ayar sayfası tasarımı yapıldı.
ikon tasarımı yapıldı.
kayıtları getir sayfasında undefined check yapıldı. 
takip edilen yazarlar engellemiyor. [v2.0 ile kaldırıldı.]

v1.1
yayın: 09.05.2022
eklenti marketinde ikonların bazılarının arkasının beyaz olduğu fark edildi, transparan hale getirildi.

v1.2 
gönderim: 24.09.2022 - yayın: 27.09.2022
yeni özellik: bir entry'i favlayan yazarları engellemesi
bug fix: kullanıcı sayfayı eliyle kapattığında uygulamanın çökmesi engellendi. 
bug fix: ekşi nicknamelerindeki whitespaceler tire-ye çevrilerek bug çözüldü.
bug fix: eklenti çalışırken diğer sayfalarda yapılan işlemlerin eklentiye etki etmesi problemi çözüldü.
bug fix: böylece adblocker gibi sayfaya müdahale eden eklentilerin neden olduğu sorunlar giderildi.