@@ -4,4 +4,8 @@
 - uygulama için görüntüler ve videolar (/ss)
 
 ## Ayrıca
+- manifestteki versiyonu değiştirmeyi unutma.
 - Github Pages sayfasındaki ss'leri güncellemeyi unutma. ./ss klasörünü ../docs/ss/ içine taşı ve gerekiyorsa ss.html'i düzenle.
+- changelog.txt'e son halini ver.
+- Gerekiyorsa markettext.txt'i düzenle.
+- welcome.html sayfasını güncelle.
