@@ -41,6 +41,10 @@ bug fix: tüm engelleri kaldırma özelliği ekşisözlük.com güncellemesi ned
 
 v2.2
 yayın: 
+yeni özellik: engelle veya sessize al tercihi ayar menüsüne eklendi.
+yeni özellik: çaylakları da engelleme tercihi ayar menüsüne eklendi.
+yeni özellik: tüm yazarların engelini kaldırma işlemi optimize edilerek süreç hızlandırıldı.
+bug fix: yükleme ve güncellemeden sonra geriye dönük uyumluluk sağlanamadığı için eklentinin ayarlarının sıfırlanması sağlandı.
 
 Versiyon notları (detaylı) 
 -------------------------------------------------
@@ -132,7 +136,7 @@ API limitleri(01.03.23):
   UNDOBAN user, title: 10/dk  mute: ?(stabil değil)
 
 v2.2
-gönderim: - yayın: 
+gönderim: 06.03.2023 yayın: 
 yeni özellik: ban/mute ayarı eklendi.
 yeni özellik: çaylakları da engelleme ayarı eklendi. (sadece FAV için. LIST ve UNDOBANALL için zaten çaylaklar ayırt edilmiyor.)
 yeni özellik: undobanall için sadece gerekli işlemler (engel/başlık engelle/sessize al) yapılarak süreç hızlandırıldı.
@@ -144,6 +148,7 @@ engel sürerken cooldown esnasında bir şekilde manuel engellemeler de kuyruğa
 bir yazarın takipçilerini engelleme özelliği
 notification kısmında tahmini bitiş süresi
 performans analizi yapılmalı
+  map.clear memory leak?
   logger'ın etkisi gözlemlenmeli
     array silindiğinde gerçekten bellekten siliniyor mu, reflerden dolayı memory leak oluşuyor mu?
     log.getData yeni arraylere kopyalanıyor mu, ref değeri mi dönüyor?
